--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["zkan <zkan.cs@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 ccxt = "^1.66.32"
+pandas = "^1.3.5"
 
 [tool.poetry.dev-dependencies]
 
